# arcade-ai-agent-cro

./: README.md  eslint.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/auth/status/: route.ts
app/api/chat/: route.ts
app/api/session/: route.ts
docs/: demo-runbook.md
mcp/deal-memory/: README.md  pyproject.toml
mcp/deal-memory/src/deal_memory/: __init__.py  deal-memory.sqlite3  server.py
seed/: crm-template.csv  deal-plan-template.md
